assets/cp.styles.css
/* ... */
.checkbox-ios input[type=checkbox]:checked + label:before {
	width: 60px;
	background: #1a73e8;
}

.checkbox-ios input[type=checkbox]:checked + label:after {
	left: 32px;
}

/* Admin dynamic fields */
.list-wrapper {
	background: #e9ecef;
	padding: 1rem;
	border-radius: .25rem;
}

.btn-dynamic-remove {
	position: absolute;
	top: 0px;
	right: 0px;
}

/* Duplicate product */
.product-copy {
	position: relative;
}

.product-copy a {
	position: absolute;
	right: 0px;
	padding: 12px 18px;
}

.product-copy a:hover {
	color: #417cb9;
}

.product-copy a:hover svg {
	fill: currentColor;
}

/* Product images */
#list-images {
	display: block;
}

#list-images .attached-img {
	display: inline-block;
	padding: 1rem;
	background: white;
	margin-right: 1rem;
	margin-bottom: 1rem;
	border-radius: .25rem;
}

#upload-msg {
	position: absolute;
	background: white;
	width: 100%;
	height: 100%;
	border: 1px solid #ced4da;
	border-radius: .25rem;
	padding: .375rem .75rem;
	display: none;
}

/* Fix for bootstrap select */
.dropdown.bootstrap-select {
	position: relative;
}

.dropdown.bootstrap-select select {
	position: static !important;
}

.dropdown.bootstrap-select button.dropdown-toggle {
	position: absolute;
	top: 0px;
	left: 0px;
}

/* Bootstrap fixes */
#sys-modal-user-settings {
	padding-right: 0px !important;
}

/* Wysiwyg */
textarea.form-control.wysiwyg {
	min-height: 340px;
}

div.wysiwyg.focused {
	background-color: #fff;
	border-color: #80bdff;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}

/* CodeMirror */
.CodeMirror {
	border: 1px solid #eee;
	height: auto;
}

.CodeMirror pre > * {
	text-indent: 0px;
}

/* Bootstrap buttons */
.btn-primary {
	background-color: #1a73e8;
	border-color: #1a73e8;
	color: #fff;
}

.btn-primary:hover {
	background: rgba(26, 115, 232, 0.761);
}

.btn-secondary {
	background: transparent;
	border-color: #dadce0;
	color: #1a73e8;
	font-weight: 500;
}

.btn-secondary:hover {
	background: rgba(66, 133, 244, 0.04);
	border-color: #d2e3fc;
	color: #1a73e8;
}

/* Bootstrap select */
.bs-searchbox,
.bs-actionsbox,
.bs-donebutton {
	padding: 0px 8px 8px 8px;
}

.bootstrap-select button.btn {
	outline: 0;
	border-color: #ced4da;
}

.bootstrap-select button.btn:active,
.bootstrap-select button.btn:hover,
.bootstrap-select button.btn:focus {
	outline: 0 !important;
}

.bootstrap-select ul.dropdown-menu li {
	background-color: transparent;
}

.bootstrap-select.form-control.show {
	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}

.bootstrap-select.form-control.show button.btn {
	border-color: #80bdff;
	background-color: #fff;
}

.bootstrap-select .dropdown-menu li a.selected {
	background-color: #007bff;
	color: #fff;
}

.bootstrap-select .dropdown-menu.show {
	padding-bottom: 0px !important;
}

/* Mobile fixes */
@media (min-width: 992px) {
	body.cp.cp-sidebar-right .wrap .sidebar.sidebar-right.d-lg-table-cell {
		display: table-cell !important;
	}

	.data-form .row .sys-messages .alert {
		margin-top: 1rem;
		margin-bottom: 0px;
	}

	.data-form .form-group.last {
		margin-bottom: 0px;
	}

	.data-form.index-add .form-group.n8,
	.data-form.index-modify .form-group.n8 {
		margin-bottom: 0px;
	}

	.data-form.blog-add .form-group.n8,
	.data-form.blog-modify .form-group.n8 {
		margin-bottom: 0px;
	}

	.data-form.blog-categories-add .form-group.n4,
	.data-form.blog-categories-modify .form-group.n4 {
		margin-bottom: 0px;
	}

	.data-form.shop-add .form-group.n12,
	.data-form.shop-modify .form-group.n12 {
		margin-bottom: 0px;
	}

	.data-form.shop-categories-add .form-group.n4,
	.data-form.shop-categories-modify .form-group.n4 {
		margin-bottom: 0px;
	}

	.data-form.shop-attributes-add .form-group.n4,
	.data-form.shop-attributes-modify .form-group.n4 {
		margin-bottom: 0px;
	}

	.data-form.shop-currencies-add .form-group.n5,
	.data-form.shop-currencies-modify .form-group.n5 {
		margin-bottom: 0px;
	}

	.data-form.users-add .form-group.n7,
	.data-form.users-modify .form-group.n7 {
		margin-bottom: 0px;
	}

	.data-form.settings-pagination .form-group.n2 {
		margin-bottom: 0px;
	}
}

@media (max-width: 575px) {
	/* Less then 576px */
	body.cp {
		height: auto;
		overflow: scroll;
	}

	body.cp .wrap .sidebar {
		width: auto;
		box-shadow: none;
	}

	body.cp .wrap .content {
		padding-top: 0rem;
	}
}

@media (max-width: 767px) {
	/* Less then 768px */
	.navbar-expand-md .navbar-collapse {
		padding: 1rem;
		background: #417cb9;
		box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, .3);
		border-radius: .25rem;
	}
}

